--- a/index.html
+++ b/index.html
@@ -1,11 +1,184 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl-PL">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/styles/reset.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;600;700;800;900&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.cdnfonts.com/css/sf-ui-text-2" rel="stylesheet">
+
+    <title>Lista Nauczycieli</title>
 </head>
 <body>
-    
+    <div class="container">
+        <form action="#" method="get" class="searchBox">
+            <input required class="searchInput"type="text" name="teacher" placeholder="Wyszukaj">
+            <button class="searchButton">
+                <i class="material-icons">
+                    <svg xmlns="http://www.w3.org/2000/svg" transform=translate(0,2) x="0px" y="0px" width="18" viewBox="0 0 50 50">
+                        <path class="search_icon" d="M 21 3 C 11.601563 3 4 10.601563 4 20 C 4 29.398438 11.601563 37 21 37 C 24.355469 37 27.460938 36.015625 30.09375 34.34375 L 42.375 46.625 L 46.625 42.375 L 34.5 30.28125 C 36.679688 27.421875 38 23.878906 38 20 C 38 10.601563 30.398438 3 21 3 Z M 21 7 C 28.199219 7 34 12.800781 34 20 C 34 27.199219 28.199219 33 21 33 C 13.800781 33 8 27.199219 8 20 C 8 12.800781 13.800781 7 21 7 Z"></path>
+                    </svg>
+                </i>
+            </button>
+        </form>
+
+        <ul class="teacher_list">
+            <li class="list_item">
+                <div class="teacher_name">
+                    <img src="assets/images/cirkle.svg" alt="cirkle">
+                    Jarosław Garbowski 
+                </div>
+
+                <a href="#" class="aplikuj_btn">
+                    Aplikuj
+                </a>
+            </li>
+            <li class="list_item">
+                <div class="teacher_name">
+                    <img src="assets/images/cirkle.svg" alt="cirkle">
+                    Jarosław Garbowski 
+                </div>
+
+                <a href="#" class="aplikuj_btn">
+                    Aplikuj
+                </a>
+            </li>
+            <li class="list_item">
+                <div class="teacher_name">
+                    <img src="assets/images/cirkle.svg" alt="cirkle">
+                    Jarosław Garbowski 
+                </div>
+
+                <a href="#" class="aplikuj_btn">
+                    Aplikuj
+                </a>
+            </li>
+            <li class="list_item">
+                <div class="teacher_name">
+                    <img src="assets/images/cirkle.svg" alt="cirkle">
+                    Jarosław Garbowski 
+                </div>
+
+                <a href="#" class="aplikuj_btn">
+                    Aplikuj
+                </a>
+            </li>
+            <li class="list_item">
+                <div class="teacher_name">
+                    <img src="assets/images/cirkle.svg" alt="cirkle">
+                    Jarosław Garbowski 
+                </div>
+
+                <a href="#" class="aplikuj_btn">
+                    Aplikuj
+                </a>
+            </li>
+            <li class="list_item">
+                <div class="teacher_name">
+                    <img src="assets/images/cirkle.svg" alt="cirkle">
+                    Jarosław Garbowski 
+                </div>
+
+                <a href="#" class="aplikuj_btn">
+                    Aplikuj
+                </a>
+            </li>
+            <li class="list_item">
+                <div class="teacher_name">
+                    <img src="assets/images/cirkle.svg" alt="cirkle">
+                    Jarosław Garbowski 
+                </div>
+
+                <a href="#" class="aplikuj_btn">
+                    Aplikuj
+                </a>
+            </li>
+            <li class="list_item">
+                <div class="teacher_name">
+                    <img src="assets/images/cirkle.svg" alt="cirkle">
+                    Jarosław Garbowski 
+                </div>
+
+                <a href="#" class="aplikuj_btn">
+                    Aplikuj
+                </a>
+            </li>
+            <li class="list_item">
+                <div class="teacher_name">
+                    <img src="assets/images/cirkle.svg" alt="cirkle">
+                    Jarosław Garbowski 
+                </div>
+
+                <a href="#" class="aplikuj_btn">
+                    Aplikuj
+                </a>
+            </li>
+            <li class="list_item">
+                <div class="teacher_name">
+                    <img src="assets/images/cirkle.svg" alt="cirkle">
+                    Jarosław Garbowski 
+                </div>
+
+                <a href="#" class="aplikuj_btn">
+                    Aplikuj
+                </a>
+            </li>
+            <li class="list_item">
+                <div class="teacher_name">
+                    <img src="assets/images/cirkle.svg" alt="cirkle">
+                    Jarosław Garbowski 
+                </div>
+
+                <a href="#" class="aplikuj_btn">
+                    Aplikuj
+                </a>
+            </li>
+        </ul>
+    </div>  
+    <footer class="footer">
+        <a class="footer_link"  href="#">
+            <img src="assets/images/watch.svg" alt="hours">
+            <p>Your hours</p>
+        </a>
+        <a class="add" href="#">
+            <svg display="none">
+                <symbol viewBox="0 0 56 64" id="add">
+                    <g id="Main Animation" clip-path="url(#clip0_128_71)">
+                        <g id="Icon add">
+                            <g id="Ellipse 4" filter="url(#filter0_d_128_71)">
+                                <circle id="add_circle" cx="28.5" cy="28.5" r="25.5" fill="#735BF2"/>
+                            </g>
+                            <path id="Shape" d="M37.7177 27.7301H29.5092V19.5216C29.5092 19.0966 29.1646 18.752 28.7396 18.752C28.3146 18.752 27.9701 19.0966 27.9701 19.5216V27.7301H19.7616C19.3365 27.7301 18.992 28.0746 18.992 28.4996C18.992 28.9247 19.3365 29.2692 19.7616 29.2692H27.9701V37.4777C27.9701 37.9027 28.3146 38.2473 28.7396 38.2473C29.1646 38.2473 29.5092 37.9027 29.5092 37.4777V29.2692H37.7177C38.1427 29.2692 38.4873 28.9247 38.4873 28.4996C38.4873 28.0746 38.1427 27.7301 37.7177 27.7301Z" fill="white" stroke="white"/>
+                        </g>
+                    </g>
+                </symbol>
+            </svg>
+
+            <svg class="add_icon">
+                <use xlink:href="#add"></use>
+            </svg>
+        </a>
+        <a class="footer_link" href="#">
+            <img src="assets/images/profile.svg" alt="profile">
+            <p>Profile</p>
+        </a>
+        <svg class="footer_circle" width="60" height="30">
+              <path d="M0,-1 a1,1 0 0,0 60,0" fill="white" />
+        </svg>
+    </footer>
 </body>
 </html>
