--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     Jarosław Garbowski 
                 </div>
 
-                <a href="#" class="aplikuj_btn">
+                <a href="views/hourCheck.html" class="aplikuj_btn">
                     Aplikuj
                 </a>
             </li>
@@ -53,7 +53,7 @@
                     Jarosław Garbowski 
                 </div>
 
-                <a href="#" class="aplikuj_btn">
+                <a href="views/hourCheck.html" class="aplikuj_btn">
                     Aplikuj
                 </a>
             </li>
@@ -63,7 +63,7 @@
                     Jarosław Garbowski 
                 </div>
 
-                <a href="#" class="aplikuj_btn">
+                <a href="views/hourCheck.html" class="aplikuj_btn">
                     Aplikuj
                 </a>
             </li>
@@ -73,7 +73,7 @@
                     Jarosław Garbowski 
                 </div>
 
-                <a href="#" class="aplikuj_btn">
+                <a href="views/hourCheck.html" class="aplikuj_btn">
                     Aplikuj
                 </a>
             </li>
@@ -150,11 +150,11 @@
         </ul>
     </div>  
     <footer class="footer">
-        <a class="footer_link"  href="#">
+        <a class="footer_link"  href="views/yourHours.html">
             <img src="assets/images/watch.svg" alt="hours">
             <p>Your hours</p>
         </a>
-        <a class="add" href="views/hourCheck.html">
+        <a class="add" href="#!">
             <svg display="none">
                 <symbol x="-5px" y="-30px" height="140px" viewBox="0 0 90 125" xml:space="preserve" id="add">
                     <path id="add_circle" d="M50,11.5c-21.2,0-38.5,17.3-38.5,38.5S28.8,88.5,50,88.5S88.5,71.2,88.5,50S71.2,11.5,50,11.5z M67,53H52v14  c0,1.4-1.1,2.5-2.5,2.5S47,68.4,47,67V53H33c-1.4,0-2.5-1.1-2.5-2.5S31.6,48,33,48h14V33c0-1.4,1.1-2.5,2.5-2.5S52,31.6,52,33v15h15  c1.4,0,2.5,1.1,2.5,2.5S68.4,53,67,53z"/>
